Stop long error messages from overflowing modal

--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -66,6 +66,7 @@ select {
   width: 80%;
   height: 20%;
   font-size: 24px;
+  overflow-y: auto;
 }
 .close {
   color: #aaa;
